--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ts-node -O '{\"module\": \"commonjs\"}' build.ts",
+    "build-windows": "ts-node -O {\"\"\"module\"\"\":\"\"\"commonjs\"\"\"} build.ts",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
     "test:ci": "ng test --watch=false --code-coverage --no-progress",
