--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "semantic-release": "cd dist && semantic-release"
   },
   "private": true,
+  "publishConfig": {
+    "registry": "http://repo.cg.ru/repository/npm-private/"
+  },
   "dependencies": {
     "@angular/animations": "7.2.15",
     "@angular/common": "7.2.15",
