--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/scttcper/ngx-toastr",
   "bugs": "https://github.com/scttcper/ngx-toastr/issues",
   "repository": "scttcper/ngx-toastr",
-  "version": "0.0.0-placeholder",
+  "version": "8.10.2-cg.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
